Feita verificação da data em sessão

--- a/src/cinetudoproject/view/CadastroSessao.fxml
+++ b/src/cinetudoproject/view/CadastroSessao.fxml
@@ -40,22 +40,22 @@
             <Font name="Droid Sans Georgian" size="15.0" />
          </font>
       </JFXButton>
-      <JFXComboBox id="comboBox" fx:id="salaBox" layoutX="717.0" layoutY="252.0" prefHeight="38.0" prefWidth="239.0" promptText="Sala" style="-fx-background-color: #FFFFFF;" />
-      <JFXComboBox id="comboBox" fx:id="filmeBox" layoutX="455.0" layoutY="252.0" prefHeight="38.0" prefWidth="239.0" promptText="Filme" style="-fx-background-color: #FFFFFF;" />
-      <JFXTextField fx:id="fieldDiaInicio" focusColor="#ff4537" labelFloat="true" layoutX="446.0" layoutY="306.0" maxWidth="550.0" minWidth="168.0" prefHeight="39.0" prefWidth="246.0" promptText="Data de Inicio">
+      <JFXComboBox id="comboBox" fx:id="salaBox" layoutX="717.0" layoutY="240.0" prefHeight="38.0" prefWidth="239.0" promptText="Sala" style="-fx-background-color: #FFFFFF;" />
+      <JFXComboBox id="comboBox" fx:id="filmeBox" layoutX="455.0" layoutY="240.0" prefHeight="38.0" prefWidth="239.0" promptText="Filme" style="-fx-background-color: #FFFFFF;" />
+      <JFXTextField fx:id="fieldDiaInicio" focusColor="#ff4537" labelFloat="true" layoutX="446.0" layoutY="300.0" maxWidth="550.0" minWidth="168.0" prefHeight="39.0" prefWidth="246.0" promptText="Data Inicial">
          <font>
             <Font size="17.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="fieldDiaFim" focusColor="#ff4537" labelFloat="true" layoutX="719.0" layoutY="306.0" maxWidth="550.0" minWidth="168.0" prefHeight="39.0" prefWidth="246.0" promptText="Data de Finalização">
+      <JFXTextField fx:id="fieldDiaFim" focusColor="#ff4537" labelFloat="true" layoutX="719.0" layoutY="300.0" maxWidth="550.0" minWidth="168.0" prefHeight="39.0" prefWidth="246.0" promptText="Data Final">
          <font>
             <Font size="17.0" />
          </font>
       </JFXTextField>
       <JFXComboBox id="comboBox" fx:id="horarioBox" layoutX="453.0" layoutY="357.0" prefHeight="38.0" prefWidth="503.0" promptText="Horários" style="-fx-background-color: #FFFFFF;" />
-      <BorderPane fx:id="paneHorario" layoutX="447.0" layoutY="402.0" prefHeight="61.0" prefWidth="509.0" visible="false">
+      <BorderPane fx:id="paneHorario" layoutX="447.0" layoutY="407.0" prefHeight="61.0" prefWidth="509.0" visible="false">
          <center>
-            <JFXTextField fx:id="fieldHorario" focusColor="#ff4537" maxWidth="550.0" minWidth="168.0" prefHeight="39.0" prefWidth="503.0" promptText="Novo Horário" BorderPane.alignment="CENTER">
+            <JFXTextField fx:id="fieldHorario" focusColor="#ff4537" labelFloat="true" maxWidth="550.0" minWidth="168.0" prefHeight="39.0" prefWidth="503.0" promptText="Novo Horário" BorderPane.alignment="CENTER">
                <font>
                   <Font size="17.0" />
                </font>
@@ -69,6 +69,6 @@
             </JFXButton>
          </right>
       </BorderPane>
-      <JFXComboBox id="comboBox" fx:id="cinemaBox" disable="true" layoutX="454.0" layoutY="194.0" prefHeight="38.0" prefWidth="503.0" promptText="Cinema" style="-fx-background-color: #FFFFFF;" />
+      <JFXComboBox id="comboBox" fx:id="cinemaBox" disable="true" layoutX="454.0" layoutY="168.0" prefHeight="38.0" prefWidth="503.0" promptText="Cinema" style="-fx-background-color: #FFFFFF;" />
    </children>
 </AnchorPane>
