--- a/src/cinetudoproject/view/SidePanelContent.fxml
+++ b/src/cinetudoproject/view/SidePanelContent.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="601.0" prefWidth="200.0" style="-fx-background-color: #f5f5f0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.SidePanelContentController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="601.0" prefWidth="200.0" style="-fx-background-color: #f5f5f0;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.SidePanelContentController">
    <children>
       <ImageView fx:id="promo_image" fitHeight="127.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -17,8 +13,7 @@
          </image>
       </ImageView>
       <JFXButton fx:id="b1" buttonType="RAISED" onAction="#changeColor" prefHeight="50.0" prefWidth="200.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Inicio" />
-      <JFXButton fx:id="b2" buttonType="RAISED" layoutX="10.0" layoutY="123.0" onAction="#changeColor" prefHeight="50.0" prefWidth="200.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Vendas" />
-      <JFXButton fx:id="b3" buttonType="RAISED" layoutX="10.0" layoutY="197.0" onAction="#changeColor" prefHeight="50.0" prefWidth="200.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Configuraçoes" />
+      <JFXButton fx:id="b3" buttonType="RAISED" layoutX="10.0" layoutY="197.0" onAction="#buscarFilme" prefHeight="50.0" prefWidth="200.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Buscar Filme" />
       <JFXButton fx:id="exit" buttonType="RAISED" layoutX="10.0" layoutY="271.0" onAction="#exit" prefHeight="50.0" prefWidth="200.0" ripplerFill="#fc0000" style="-fx-background-color: #f1f1f1;" text="Sair" />
    </children>
 </VBox>
