--- a/src/cinetudoproject/view/BuscarSessao.fxml
+++ b/src/cinetudoproject/view/BuscarSessao.fxml
@@ -3,7 +3,6 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
-<?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXToolbar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.BuscarFilmeController">
+<AnchorPane id="AnchorPane" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cinetudoproject.view.BuscarSessaoController">
    <children>
       <ImageView fitHeight="419.0" fitWidth="34.0" layoutX="697.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -23,19 +22,15 @@
       </ImageView>
       <Pane layoutX="82.0" layoutY="113.0" prefHeight="409.0" prefWidth="627.0" style="-fx-background-color: #FFF;">
          <children>
-            <JFXTextField fx:id="searchField" focusColor="#ee1e07" labelFloat="true" layoutX="59.0" layoutY="107.0" maxWidth="246.0" minWidth="246.0" onAction="#SearchMovies" prefHeight="32.0" prefWidth="246.0" promptText="Filme" />
-            <ImageView fitHeight="19.0" fitWidth="33.0" layoutX="273.0" layoutY="108.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../img/ic_search.png" />
-               </image>
-            </ImageView>
             <JFXDatePicker fx:id="dataField" defaultColor="#ee4704" layoutX="332.0" layoutY="109.0" prefHeight="32.0" prefWidth="260.0" promptText="Escolha uma data" />
-            <Label layoutX="245.0" layoutY="36.0" prefHeight="25.0" prefWidth="131.0" text="Buscar Salas">
+            <Label layoutX="198.0" layoutY="36.0" prefHeight="25.0" prefWidth="226.0" text="Assentos Disponiveis">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <JFXComboBox fx:id="salaCombo" layoutX="189.0" layoutY="173.0" prefHeight="32.0" prefWidth="286.0" promptText="Salas" style="-fx-background-color: #FFF;" visible="false" />
+            <JFXComboBox fx:id="salaCombo" layoutX="78.0" layoutY="112.0" prefHeight="26.0" prefWidth="197.0" promptText="Salas" />
+            <JFXComboBox fx:id="horarioSessaoCombo" layoutX="77.0" layoutY="179.0" prefHeight="26.0" prefWidth="205.0" promptText="Horario Sessao" />
+            <JFXComboBox fx:id="assentosDisponiveisCombo" layoutX="336.0" layoutY="180.0" prefHeight="26.0" prefWidth="214.0" promptText="Assentos Disponíveis" />
          </children>
       </Pane>
       <BorderPane prefHeight="81.0" prefWidth="800.0" style="-fx-background-color: #f5f5f0;" AnchorPane.bottomAnchor="519.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -59,6 +54,6 @@
          </top>
       </BorderPane>
       <JFXButton fx:id="backButton" buttonType="RAISED" layoutX="209.0" layoutY="359.0" onAction="#back2main" prefHeight="41.0" prefWidth="158.0" style="-fx-background-color: #f44336;" text="Voltar" textFill="WHITE" />
-      <JFXButton fx:id="searchButton" buttonType="RAISED" layoutX="423.0" layoutY="359.0" onAction="#SearchMovies" prefHeight="41.0" prefWidth="158.0" style="-fx-background-color: #f44336;" text="Buscar" textFill="WHITE" />
+      <JFXButton fx:id="searchButton" buttonType="RAISED" layoutX="423.0" layoutY="359.0" onAction="#mostrarDisponibilidade" prefHeight="41.0" prefWidth="158.0" style="-fx-background-color: #f44336;" text="Buscar" textFill="WHITE" />
    </children>
 </AnchorPane>
